force-app/main/default/objects/Associated_Person_Fields__c/Associated_Person_Fields__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Associated Person Field Ids</label>
</CustomObject>