force-app/main/default/objects/Associated_Person_Fields__c/fields/Account_lkId__c.field-meta.xml
<CustomField>
    <fullName>Account_lkId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account LkId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>