force-app/main/default/objects/Associated_Person_Fields__c/fields/FrequentFlyerNumber__c.field-meta.xml
<CustomField>
    <fullName>FrequentFlyerNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FrequentFlyerNumber</label>
    <length>50</length>
    <type>Text</type>
</CustomField>