force-app/main/default/objects/Associated_Person_Fields__c/fields/JobTitle__c.field-meta.xml
<CustomField>
    <fullName>JobTitle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>JobTitle</label>
    <length>50</length>
    <type>Text</type>
</CustomField>